--- a/pom.xml
+++ b/pom.xml
@@ -240,7 +240,7 @@
 
 	<profiles>
 		<profile>
-			<id>default-profile</id>
+			<id>jconsole</id>
 			<activation>
 				<!--<activeByDefault>true</activeByDefault>-->
 				<file>
@@ -268,6 +268,24 @@
 					<scope>system</scope>
 					<systemPath>${toolsjar}</systemPath>
 					<optional>true</optional>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>java11plus</id>
+			<activation>
+				<jdk>[11,)</jdk>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>javax.annotation</groupId>
+					<artifactId>javax.annotation-api</artifactId>
+					<version>1.3.2</version>
+				</dependency>
+				<dependency>
+					<groupId>jakarta.xml.bind</groupId>
+					<artifactId>jakarta.xml.bind-api</artifactId>
+					<version>2.3.3</version>
 				</dependency>
 			</dependencies>
 		</profile>
